[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kgrapher"
version = "0.1.0"
description = "Local knowledge graph for exam prep with centrality-weighted spaced repetition"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Knowledge Grapher Contributors" }]
keywords = ["spaced-repetition", "knowledge-graph", "markdown", "exam-prep"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "networkx>=3.2",
    "python-frontmatter>=1.1",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "pyvis>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3"]

[project.scripts]
kgrapher = "kgrapher.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kgrapher"]

[tool.hatch.build.targets.sdist]
include = ["src/kgrapher", "README.md", "LOGBOOK.md", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
